--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,17 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "flake8>=7.1.1",
-    "isort>=6.0.0",
     "pytest>=8.3.4",
     "python-dotenv>=1.0.1",
+    "ruff>=0.9.5",
+]
+
+[tool.ruff.lint]
+select = [
+    "B", # flake8-bugbear
+    "E", # pycodestyle
+    "F", # Pyflakes
+    "I", # isort
+    "SIM", # flake8-simplify
+    "UP", # pyupgrade
 ]
