--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,24 +1,10 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: v0.0.280  # stableを指定すると最新のバージョンになりますが、バージョン固定が推奨
     hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
--   repo: https://github.com/psf/black
-    rev: 24.4.0
+      - id: ruff
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.4.1
     hooks:
-    -   id: black
--   repo: https://github.com/PyCQA/flake8
-    rev: 7.0.0
-    hooks:
-    -   id: flake8
--   repo: https://github.com/pre-commit/mirrors-isort
-    rev: v5.10.0
-    hooks:
-    -   id: isort
--   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.7.0
-    hooks:
-    -   id: mypy
-        args: [--ignore-missing-imports, --disallow-untyped-defs]
-        additional_dependencies: ["types-requests"]
+      - id: mypy
