--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -4,19 +4,19 @@ tasks:
   pre-commit:
     desc: Run pre-commit checks
     cmds:
-      - uv run ruff check --fix .
-      - uv run ruff format .
-      - uv run mypy .
+      - uv tool run ruff@0.3.1 check . --fix
+      - uv tool run ruff@0.3.1 format .
+      - uv tool run mypy@1.8.0 . --strict
 
   run:
     desc: Run the application
     cmds:
-      - uv run -m src.your_app_name
+      - uv run -m src.my_project
 
   test:
     desc: Run tests
     cmds:
-      - uv run pytest
+      - uv tool run pytest@8.3
       
   up:
     desc: Run docker compose up
