--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "pre-commit>=4.1.0",
     "pytest==8.3",
     "python-dotenv>=1.0.1",
 ]
