--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,8 @@ repos:
     hooks:
       - id: ruff-check
         name: ruff check
-        entry: uv tool run ruff@0.3.1 check . --fix
+        entry: uv tool run ruff@0.3.1 check .
+        args: [--fix]
         language: system
         types: [python]
         stages: [pre-commit]
