--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,8 +14,9 @@ repos:
         language: system
         types: [python]
 
-      # - id: mypy
-      #   name: mypy
-      #   entry: uv tool run mypy .
-      #   language: system
-      #   types: [python]
+      - id: mypy
+        name: mypy
+        entry: uv tool run mypy .
+        args: [--ignore-missing-imports]
+        language: system
+        types: [python]
